@@ -1,4 +1,4 @@
-FROM openjdk:8-jdk-alpine
+FROM openjdk:11-jre-slim
 
 # Refer to Maven build -> finalName
 ARG JAR_FILE=target/PDFAPIMicroservice-0.0.1-SNAPSHOT.jar
@@ -10,4 +10,4 @@ WORKDIR /opt/app
 COPY ${JAR_FILE} app.jar
 
 # java -jar -Xmx512m /opt/app/app.jar
-ENTRYPOINT ["java","-jar", "-Xms512m", "-Xmx1152m", "-XX:MaxPermSize=256m", "-XX:MaxNewSize=256m","app.jar"]
+ENTRYPOINT ["java","-jar", "-Xms4g", "-Xmx4g", "app.jar"]
